# Auto-Split

./: .gitignore  pyproject.toml
src/: AutoSplit.py  about.py  design.py  resources_rc.py
