[tool.poetry]
name = "auto-split"
version = "1.4.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
PyQt5 = "^5.15.1"
pywin32 = "^228"
opencv-python = "^4.4.0"
numpy = "^1.19.2"
keyboard = "^0.13.5"
Pillow = "^7.2.0"
ImageHash = "^4.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

